--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 aniso8601==6.0.0
+cachetools==3.1.0
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
 Flask-RESTful==0.3.7
+google-api-python-client==1.7.8
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+httplib2==0.12.1
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+pyasn1==0.4.5
+pyasn1-modules==0.2.4
+python-dotenv==0.10.1
 pytz==2018.9
 requests==2.21.0
+rsa==4.0
 six==1.12.0
+uritemplate==3.0.0
 urllib3==1.24.1
 Werkzeug==0.15.2
+youtube-python==1.0.13
 youtube-transcript-api==0.1.4
