--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pyasn1-modules==0.2.4
 python-dotenv==0.10.1
 pytz==2018.9
 requests==2.21.0
+requests-futures==0.9.9
 rsa==4.0
 six==1.12.0
 uritemplate==3.0.0
