--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ rsa==4.0
 six==1.12.0
 uritemplate==3.0.0
 urllib3==1.24.1
+uWSGI==2.0.18
 Werkzeug==0.15.2
 youtube-python==1.0.13
 youtube-transcript-api==0.1.4
